--- a/assets/scss/components/_search.scss
+++ b/assets/scss/components/_search.scss
@@ -1,7 +1,6 @@
 // Search toggle button in navbar
 .doks-search-toggle {
   color: $body-color;
-  padding: 0.25rem 0.5rem;
 
   &:hover {
     color: $primary;
