--- a/assets/scss/layouts/_header.scss
+++ b/assets/scss/layouts/_header.scss
@@ -86,16 +86,6 @@
   height: 0;
 }
 
-button#doks-languages {
-  margin-right: -0.5625rem;
-  margin-left: 0.75rem;
-}
-
-button#doks-versions {
-  margin-right: -0.5625rem;
-  margin-left: 0;
-}
-
 .offcanvas .nav-link {
   color: $body-color;
 }
